<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/fragment_login">

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:ems="15"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/email_hint" />

    <EditText
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/password_hint"/>

    <EditText
        android:id="@+id/username"
        android:visibility="invisible"
        android:layout_below="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="15"
        android:hint="@string/username_hint"/>


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/login_button"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="350dp" />

    <Switch
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/sign_up_button"
        tools:layout_editor_absoluteX="298dp"
        tools:layout_editor_absoluteY="32dp" />

</RelativeLayout>